--- a/src/main/resources/static/css/grayscale.css
+++ b/src/main/resources/static/css/grayscale.css
@@ -217,7 +217,7 @@ a:focus {
     transform: scale(1);
   }
 }
-.content-section {
+.content-section {.content-se
   padding-top: 100px;
 }
 .download-section {
@@ -238,7 +238,7 @@ a:focus {
 }
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 250px;
+    padding-top: 120px;
   }
   .download-section {
     padding: 100px 0;
