--- a/src/main/resources/static/css/grayscale.css
+++ b/src/main/resources/static/css/grayscale.css
@@ -336,7 +336,19 @@ body {
 }
 
 #detailGraph {
+    height: 500px;
     width: 100%;
-    height: 450px;
+    max-width: 800px;
+    overflow-y: hidden;
     overflow-x: scroll;
+}
+
+.danger-image {
+    width: 50px;
+    height: 50px;
+}
+
+.safetyRating {
+    font: 20px;
+    margin-bottom: 20px;
 }
